Bugfixing alignment

--- a/css/main.css
+++ b/css/main.css
@@ -26,3 +26,11 @@ img {
   border-width: 4px;
   border-radius: 5px;
 }
+#header {
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  border-color: Crimson;
+  border-style: solid;
+  border-width: 4px;
+}
